# glPong

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.c
data/: config.json
lib/: glPong.h
lib/glPong/: ball.c  ball.h  drawable.c  drawable.h  log.h  nuklear_glfw3.h  paddle.c  paddle.h
src/: glPong.h  main.c
src/glPong/: ball.c  ball.h  direction.h  drawable.c  drawable.h  log.h  orientation.h  paddle.c  paddle.h
src/glPong/game/: config.c  config.h  context.c  context.h  menu.c  menu.h  mode.c  mode.h  state.h
src/modes/classic/: CMakeLists.txt  classic.c
src/modes/speedplusplus/: CMakeLists.txt  speedplusplus.c
